syntax = "proto3";

package lagusion;

message UUID {
  string value = 1;
}

message Verse {
  UUID id = 1;
  string contents = 2;
}

message Book {
	uint32 id = 1;
	string short_name = 2;
	string long_name = 3;
}

enum SortOptions {
  NUMBER = 0;
  ALPHABET = 1;
}

message Song {
  UUID id = 1;
  uint32 number = 2;
  string title = 3;
  repeated Verse verses = 4;
  Verse reff = 5;
  Book book = 6;
}

message ListSongRequest {
  uint32 book_id = 1;
  SortOptions sort_options = 2;
}

message ListSongResponse {
  repeated Song songs = 1;
}

service LaguSionService {
  rpc ListSongs(ListSongRequest) returns (ListSongResponse) {}
}

